added description of how I came to live in those cities andwhy I would want to visit the other ones.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <body>
     <h1>Cities I've Lived In</h1>
     <div>
+      <p>
+        I was born and raised in Shelter Island, NY for most of my life. I spent 18 years there before I went off 
+        to college. I lived in East Stroudsburg, PA for a few years and attended East Stroudsburg University until 
+        school got too expensive to continue. Then I lived with my wife and her family for a year in Bethlehem, PA
+        for about a year while I was waiting to go to basic training for the Air Force. Finally, I got stationed in 
+        Great Falls, MT where I've lived for my entire career.
+      </p>
+    </div>
+    <div>
       <ul>
         <li>Shelter Island, NY</li>
         <li>East Stoudsburg, PA</li>
@@ -14,6 +23,15 @@
       </ul>
     </div>
     <h1>Cities I Want To Visit</h1>
+    <div>
+      <p>
+        I would love to visit Charleston, SC because oneof my good friends is from there and always said it was
+        beautiful. San Fransico has been a place I've wanted to visit because there is so much to see and I'm a 
+        big baseball fan and Oracle Park has always seemed really amazing. Finally, I'd like to visit Seattle because
+        I'm a big Dave Grohl and Foo Fighters fan and I think it would be pretty cool to visit the birthplace of
+        Grunge.
+      </p>
+    </div>
     <div>
       <ol>
         <li>Charleston, SC</li>
