added strong to every odd element of the 2nd list and emphasis to the even element

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </div>
     <div>
       <ul>
-        <li>Shelter Island, NY</li>
-        <li>East Stoudsburg, PA</li>
-        <li>Bethlehem, PA</li>
-        <li>Great Falls, MT</li>
+        <li>Shelter Island, NY. <span>Born and raised here.</span></li>
+        <li>East Stoudsburg, PA. <span>Where I went to college</span></li>
+        <li>Bethlehem, PA. <span>Where I stayed with my wife and her family</span></li>
+        <li>Great Falls, MT. <span>Where i've been stationed for the past decade</span></li>
       </ul>
     </div>
     <h1>Cities I Want To Visit</h1>
@@ -34,9 +34,9 @@
     </div>
     <div>
       <ol>
-        <li>Charleston, SC</li>
-        <li>San Fransico, CA</li>
-        <li>Seattle, WA</li>
+        <li><strong>Charleston, SC</strong></li>
+        <li><em>San Fransico, CA</em></li>
+        <li><strong>Seattle, WA</strong></li>
       </ol>
     </div>
   </body>
