added image to bottom of page

--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
         <li><strong>Seattle, WA</strong></li>
       </ol>
     </div>
+    <div>
+      <img 
+        src='https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg'
+        alt='A slice of grapefruit on top of other sliced grapefruit'
+      />  
+    </div>
   </body>
 </html> 
