added video at bottom of page. Added autoplay capability but won't work in Chrome.

--- a/index.html
+++ b/index.html
@@ -43,12 +43,19 @@
       <img 
         src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
         alt="A slice of grapefruit on top of other sliced grapefruit"
+        height= "200px"
+        width= "200px"
       />  
     </div>
     <div>
       <audio controls>
         <source src="C:\Users\Toth Family\Downloads\Audio_File.ogg" type="audio/ogg"/>
       </audio>
+    </div>
+    <div>
+      <video controls autoplay>
+        <source src="C:\Users\Toth Family\Downloads\Video_File.ogv" type="video/ogg"/>
+      </video>
     </div>
   </body>
 </html> 
