--- a/favorites.html
+++ b/favorites.html
@@ -6,7 +6,18 @@
   <body>
     <table>
       <thead>
-      </thead>
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Favorite Animal</th>
+       </thead>
+       <tbody>
+         <tr>
+           <td>Louis</td>
+           <td>Toth</td>
+           <td>Dogs</td>
+         </tr>
+       </tbody>
     </table>
   </body>
 </html>
